# diffusion-rs

./: .gitignore  .typos.toml  Cargo.toml  Dockerfile.manylinux  FEATURE_FLAGS.md  INSTALL.md  README.md  README_zh_cn.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  test.py  test_diffusers.py
diffuse_rs_backend/: Cargo.toml  README.md  all.html  build.rs  enum.BnbLinear.html  enum.BnbQuantType.html  enum.IsqType.html  enum.QuantMethodConfig.html  enum.QuantMethodType.html  fn.linear.html  fn.linear_b.html  fn.linear_no_bias.html  index.html  sidebar-items.js  struct.BnbQuantParmas.html  struct.GgufMatMul.html  struct.QuantizedConfig.html  struct.UnquantLinear.html  trait.QuantMethod.html
diffuse_rs_backend/bitsandbytes/: enum.BnbLinear.html  enum.BnbQuantType.html  struct.BnbQuantParmas.html
diffuse_rs_backend/gguf/: struct.GgufMatMul.html
diffuse_rs_backend/ops/: fn.sdpa.html  index.html  sidebar-items.js
diffuse_rs_backend/src/: lib.rs  ops.rs
diffuse_rs_backend/unquantized/: struct.UnquantLinear.html
diffuse_rs_cli/: Cargo.toml  README.md  all.html  constant.GUIDANCE_SCALE_DEFAULT.html  enum.SourceCommand.html  fn.main.html  index.html  struct.Args.html
diffuse_rs_cli/src/: main.rs
diffuse_rs_common/: Cargo.toml  README.md  all.html  build.rs  enum.FileData.html  enum.FileLoader.html  enum.ModelSource.html  enum.TokenSource.html  fn.conv1d.html  fn.conv1d_no_bias.html  fn.conv2d.html  fn.conv2d_no_bias.html  fn.embedding.html  fn.from_mmaped_safetensors.html  fn.get_token.html  fn.group_norm.html  fn.layer_norm.html  fn.linear.html  fn.linear_b.html  fn.linear_no_bias.html  fn.load_bpe_tokenizer.html  index.html  macro.bail.html  macro.map_dtype.html  macro.test_device.html  struct.NiceProgressBar.html  type.VarBuilder.html
diffuse_rs_common/core/: enum.DType.html  enum.Device.html  enum.DeviceLocation.html  enum.MetalError.html  enum.Storage.html  enum.StridedBlocks.html  enum.TensorIndexer.html  fn.from_storage_no_op.html  index.html  sidebar-items.js  struct.DTypeParseError.html  struct.MetalDevice.html  struct.MetalStorage.html  struct.StridedIndex.html  struct.Tensor.html  struct.TensorId.html  struct.UgIOp1.html  struct.Var.html  trait.CustomOp1.html  trait.CustomOp2.html  trait.CustomOp3.html  trait.FloatDType.html  trait.IndexOp.html  trait.InplaceOp1.html  trait.InplaceOp2.html  trait.InplaceOp3.html  trait.IntDType.html  trait.Module.html  trait.ModuleT.html  trait.NdArray.html  trait.ToUsize2.html  trait.WithDType.html
diffuse_rs_common/model_source/: enum.FileData.html  enum.FileLoader.html  enum.ModelSource.html
diffuse_rs_common/nn/: index.html  sidebar-items.js
diffuse_rs_common/nn_wrap/: fn.conv1d.html  fn.conv1d_no_bias.html  fn.conv2d.html  fn.conv2d_no_bias.html  fn.embedding.html  fn.group_norm.html  fn.layer_norm.html  fn.linear.html  fn.linear_b.html  fn.linear_no_bias.html
diffuse_rs_common/progress/: struct.NiceProgressBar.html
diffuse_rs_common/src/: lib.rs  memory_usage.rs  model_source.rs  nn.rs  nn_wrap.rs  tokenizer.rs  varbuilder.rs  varbuilder_loading.rs
diffuse_rs_common/tokenizer/: fn.load_bpe_tokenizer.html
diffuse_rs_common/tokens/: enum.TokenSource.html  fn.get_token.html
diffuse_rs_common/varbuilder/: type.VarBuilder.html
diffuse_rs_common/varbuilder_loading/: fn.from_mmaped_safetensors.html
diffuse_rs_core/: Cargo.toml  all.html  enum.ModelSource.html  enum.Offloading.html  enum.TokenSource.html  index.html  sidebar-items.js  struct.DiffusionGenerationParams.html  struct.Pipeline.html
diffuse_rs_core/pipelines/: enum.Offloading.html  struct.DiffusionGenerationParams.html  struct.Pipeline.html
diffuse_rs_core/src/: lib.rs
diffuse_rs_cuda_graph/: Cargo.toml
diffuse_rs_cuda_graph/src/: graph.rs  lib.rs  node.rs
diffuse_rs_cuda_graph/tests/: ops.rs
diffuse_rs_examples/: Cargo.toml
diffuse_rs_py/: Cargo.toml  diffuse_rs.pyi  generate_wheels.sh  pyproject.toml
diffuse_rs_py/examples/: dduf.py  flux.py
diffuse_rs_py/src/: lib.rs
diffusers_backend/: Cargo.toml  build.rs
diffusers_backend/src/: lib.rs  ops.rs
diffusers_cli/: Cargo.toml
diffusers_cli/src/: main.rs
diffusers_common/: Cargo.toml
diffusers_common/src/: lib.rs  model_source.rs  safetensors.rs  tokens.rs  varbuilder_loading.rs
diffusers_core/: Cargo.toml
diffusers_core/src/: lib.rs
diffusers_cuda_graph/: Cargo.toml
diffusers_cuda_graph/src/: graph.rs  lib.rs  node.rs
diffusers_examples/: Cargo.toml
diffusersrs_core/: Cargo.toml
diffusersrs_examples/: Cargo.toml
diffusersrs_quant/: Cargo.toml
diffusion_rs_backend/: Cargo.toml  README.md  all.html  build.rs  enum.BnbLinear.html  enum.BnbQuantType.html  enum.IsqType.html  enum.QuantMethodConfig.html  enum.QuantMethodType.html  fn.linear.html  fn.linear_b.html  fn.linear_no_bias.html  index.html  struct.BnbQuantParmas.html  struct.GgufMatMul.html  struct.QuantizedConfig.html  struct.UnquantLinear.html  trait.QuantMethod.html
diffusion_rs_cli/: Cargo.toml  README.md  all.html  constant.GUIDANCE_SCALE_DEFAULT.html  enum.SourceCommand.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
diffusion_rs_common/: Cargo.toml  README.md  all.html  build.rs  enum.FileData.html  enum.FileLoader.html  enum.ModelSource.html  enum.TokenSource.html  fn.conv1d.html  fn.conv1d_no_bias.html  fn.conv2d.html  fn.conv2d_no_bias.html  fn.embedding.html  fn.from_mmaped_safetensors.html  fn.get_token.html  fn.group_norm.html  fn.layer_norm.html  fn.linear.html  fn.linear_b.html  fn.linear_no_bias.html  fn.load_bpe_tokenizer.html  index.html  macro.bail.html  macro.map_dtype.html  macro.test_device.html  sidebar-items.js  struct.NiceProgressBar.html  type.VarBuilder.html
diffusion_rs_core/: Cargo.toml  all.html  enum.ModelDType.html  enum.ModelSource.html  enum.Offloading.html  enum.TokenSource.html  index.html  sidebar-items.js  struct.DiffusionGenerationParams.html  struct.Pipeline.html  trait.TryIntoDType.html
diffusion_rs_examples/: Cargo.toml
diffusion_rs_py/: Cargo.toml  diffuse_rs.pyi  generate_wheels.sh  pyproject.toml
(+1311 files in other folders)
