[workspace]
members = [
    "diffusers_core",
    "diffusers_examples",
    "diffusers_backend",
    "diffusers_common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Blazingly fast inference of diffusion models."
homepage = "https://github.com/EricLBuehler/diffuse-rs"
repository = "https://github.com/EricLBuehler/diffuse-rs"
keywords = ["machine-learning"]
categories = ["science"]
license = "MIT"

[workspace.dependencies]
# candle-core = { git = "https://github.com/EricLBuehler/candle.git", version = "0.8.0", rev = "6800496" }
# candle-nn = { git = "https://github.com/EricLBuehler/candle.git", version = "0.8.0", rev = "6800496" }
candle-core = "0.8.0"
candle-nn = "0.8.0"
serde = "1.0.215"
serde_json = "1.0.133"
float8 = "0.1.1"
serde_plain = "1.0.2"
half = "2.4.1"
hf-hub = "0.3.2"
tokenizers = "0.21.0"
anyhow = "1.0.94"
tqdm = "0.7.0"
indicatif = "0.17.9"
thiserror = "2.0.4"
dirs = "5.0.1"
image = "0.25.5"
once_cell = "1.19.0"
rayon = "1.1.0"
metal = { version = "0.27.0", features = ["mps"]}
lazy_static = "1.4"
paste = "1.0.15"
byteorder = "1.5.0"
safetensors = "0.4.1"
zip = "2.2.1"
memmap2 = "0.9.5"