[package]
name = "diffuse_rs_cli"
version = "0.1.0"
edition = "2021"
description = "CLI for diffuse_rs"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
diffuse_rs_core = { path = "../diffuse_rs_core" }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cliclack.workspace = true

# [features]
# cuda = ["diffuse_rs_core/cuda"]
# cudnn = ["diffuse_rs_core/cudnn"]
# metal = ["diffuse_rs_core/metal"]
# accelerate = ["diffuse_rs_core/accelerate"]
# mkl = ["diffuse_rs_core/mkl"]
