[package]
name = "diffuse_rs_core"
version = "0.1.0"
edition = "2021"
description = "Core package of diffuse_rs"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
float8.workspace = true
half.workspace = true
hf-hub.workspace = true
diffuse_rs_backend = { path = "../diffuse_rs_backend" }
diffuse_rs_common = { path = "../diffuse_rs_common" }
serde.workspace = true
serde_plain.workspace = true 
serde_json.workspace = true 
tokenizers.workspace = true
tqdm.workspace = true
indicatif.workspace = true
thiserror.workspace = true
image.workspace = true
tracing.workspace = true
objc = { workspace = true, optional = true }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "diffuse_rs_backend/cuda"]
cudnn = ["candle-core/cudnn"]
metal = ["candle-core/metal", "candle-nn/metal", "diffuse_rs_backend/metal", "dep:objc"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]
