[package]
name = "diffuse_rs_core"
readme.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
description = "Core package of diffuse_rs"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
float8.workspace = true
half.workspace = true
hf-hub.workspace = true
diffuse_rs_backend = { path = "../diffuse_rs_backend" }
diffuse_rs_common = { path = "../diffuse_rs_common" }
serde.workspace = true
serde_plain.workspace = true 
serde_json.workspace = true 
tokenizers.workspace = true
tqdm.workspace = true
indicatif.workspace = true
thiserror.workspace = true
image.workspace = true
tracing.workspace = true
objc = { workspace = true, optional = true }
clap.workspace = true

[features]
cuda = ["diffuse_rs_common/cuda", "diffuse_rs_backend/cuda"]
cudnn = ["diffuse_rs_common/cudnn"]
metal = ["diffuse_rs_common/metal", "diffuse_rs_backend/metal", "dep:objc"]
accelerate = ["diffuse_rs_common/accelerate"]
mkl = ["diffuse_rs_common/mkl"]
