[package]
name = "diffuse_rs_examples"
readme.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
description = "Examples of diffuse_rs"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
diffuse_rs_core = { path = "../diffuse_rs_core" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
