[package]
name = "diffuse_rs_py"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "diffuse_rs"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3.workspace = true
diffuse_rs_core = { path = "../diffuse_rs_core" }
anyhow.workspace = true
image.workspace = true

[build-dependencies]
pyo3-build-config = "0.23"

# [features]
# cuda = ["diffuse_rs_core/cuda"]
# cudnn = ["diffuse_rs_core/cudnn"]
# metal = ["diffuse_rs_core/metal"]
# accelerate = ["diffuse_rs_core/accelerate"]
# mkl = ["diffuse_rs_core/mkl"]
