[package]
name = "diffusers_cli"
version = "0.1.0"
edition = "2021"
description = "CLI for diffusers"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
diffusers_core = { path = "../diffusers_core" }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cliclack.workspace = true

[features]
cuda = ["diffusers_core/cuda"]
cudnn = ["diffusers_core/cudnn"]
metal = ["diffusers_core/metal"]
accelerate = ["diffusers_core/accelerate"]
mkl = ["diffusers_core/mkl"]
