[package]
name = "diffusers_common"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dirs.workspace = true
indicatif.workspace = true
tqdm.workspace = true
safetensors.workspace = true
hf-hub.workspace = true
zip.workspace = true
