[package]
name = "diffusers_core"
version = "0.1.0"
edition = "2021"
description = "Core package of diffusers"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
float8.workspace = true
half.workspace = true
hf-hub.workspace = true
diffusers_backend = { path = "../diffusers_backend" }
diffusers_common = { path = "../diffusers_common" }
serde.workspace = true
serde_plain.workspace = true 
serde_json.workspace = true 
tokenizers.workspace = true
tqdm.workspace = true
indicatif.workspace = true
thiserror.workspace = true
image.workspace = true
tracing.workspace = true

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "diffusers_backend/cuda"]
cudnn = ["candle-core/cudnn"]
metal = ["candle-core/metal", "candle-nn/metal", "diffusers_backend/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]
