[package]
name = "diffusers_cuda_graph"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
half.workspace = true

[build-dependencies]
bindgen_cuda = "0.1.1"
