[package]
name = "diffusers_examples"
version = "0.1.0"
edition = "2021"
description = "Examples of diffusers"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
diffusers_core = { path = "../diffusers_core" }
anyhow.workspace = true
clap.workspace = true
