[package]
name = "diffusersrs_core"
version = "0.1.0"
edition = "2021"
description = "Core package of diffusersrs"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
mistralrs-quant.workspace = true
