[package]
name = "diffusersrs_quant"
version = "0.1.0"
edition = "2021"
description = "Quantization routines for diffusersrs"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
serde.workspace = true
serde_json.workspace = true