[package]
name = "diffusion_rs_common"
readme = "README.md"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
dirs.workspace = true
indicatif.workspace = true
tqdm.workspace = true
safetensors.workspace = true
hf-hub.workspace = true
zip.workspace = true
memmap2.workspace = true
cudarc = { workspace = true, optional = true }
ug = { workspace = true }
ug-cuda = { workspace = true, optional = true }
ug-metal = { workspace = true, optional = true }
float8.workspace = true
half.workspace = true
intel-mkl-src = { workspace = true, optional = true }
accelerate-src = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
metal = { workspace = true, optional = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
byteorder.workspace = true
yoke.workspace = true
num_cpus.workspace = true
gemm.workspace = true
serde.workspace = true
tokenizers.workspace = true
serde_json.workspace = true

[build-dependencies]
bindgen_cuda = { version = "0.1.5", optional = true }

[features]
default = []
cuda = ["cudarc", "float8/cuda", "dep:ug-cuda", "dep:bindgen_cuda"]
cudnn = ["cuda", "cudarc/cudnn"]
mkl = ["dep:libc", "dep:intel-mkl-src"]
accelerate = ["dep:libc", "dep:accelerate-src"]
metal = ["dep:metal", "dep:ug-metal"]